"Order details and cart view fixes"

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -27,9 +27,9 @@
             <th colspan="4">
               TOTAL:
             </th>
-            <%= cart_subtotal_cents %>
+         
             <th>
-              <%= cart_subtotal_cents / 100.0 %>
+              <%= humanized_money_with_symbol cart_subtotal_cents / 100.0 %>
             </th>
           </tr>
         </tfoot>
