--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,6 +5,8 @@
   </header>
 
   <% unless enhanced_cart  == [] %>
+  <div class="Order-summary jumbotron">
+    <h4>Thank you for your order!</h4>
     <div class="panel panel-default items">
       <table class="table table-bordered">
         <thead>
@@ -35,6 +37,7 @@
         </tfoot>
       </table>
     </div>
+
 
     <div class="row">
       <div class="col-xs-12">
