"Admin Dashboard update"

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,62 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin Dashboard</h1>
+
+<br>
+
+
+<table class="table table-bordered">
+
+  <thead>
+
+    <tr>
+
+      <th>Categories</th>
+
+      <th>Number of Products in Category</th>
+
+    </tr>
+
+  </thead>
+
+
+  <tbody>
+
+    <tr>
+
+      <td>Evergreens</td>
+
+      <td><a href="categories/1"><%= @first_count %></a></td>
+
+    </tr>
+
+    <tr>
+
+      <td>Shrubs</td>
+
+      <td><a href="categories/2"><%= @second_count %></a></td>
+
+    </tr>
+
+    <tr>
+
+      <td>Trees</td>
+
+      <td><a href="categories/3"><%= @third_count %></a></td>
+
+    </tr>
+
+  </tbody>
+
+
+  <tfoot>
+
+    <tr>
+
+      <th>Total number of products</th>
+
+      <td><a href="/admin/products"><%= @product_count %></a></td>
+
+    </tr>
+
+  </tfoot>
+
+</table>
