--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -22,6 +22,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li>
+        <%= link_to 'About us', :about_index %>
+        </li>
         <%# <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
