--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -11,40 +11,13 @@
 
       <th>Categories</th>
 
-      <th>Number of Products in Category</th>
+      <td><a href="/admin/categories"><%= @category.length %></a></td>
 
     </tr>
 
   </thead>
 
 
-  <tbody>
-
-    <tr>
-
-      <td>Evergreens</td>
-
-      <td><a href="categories/1"><%= @first_count %></a></td>
-
-    </tr>
-
-    <tr>
-
-      <td>Shrubs</td>
-
-      <td><a href="categories/2"><%= @second_count %></a></td>
-
-    </tr>
-
-    <tr>
-
-      <td>Trees</td>
-
-      <td><a href="categories/3"><%= @third_count %></a></td>
-
-    </tr>
-
-  </tbody>
 
 
   <tfoot>
@@ -53,7 +26,7 @@
 
       <th>Total number of products</th>
 
-      <td><a href="/admin/products"><%= @product_count %></a></td>
+      <td><a href="/admin/products"><%= @product.length %></a></td>
 
     </tr>
 
