--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -36,7 +36,9 @@
           > %>
             <%# Categories %>
           <%# </a>
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown"> %>
+          <ul class="dropdown-menu dropdown-menu-dark" 
+          aria-labelledby="navbarDropdown"> %>
+            <li><%= link_to 'Categories', [:admin, :categories] %></li>
             <% Category.all.each do |category| %>
             <li class="nav-item">
               <%= link_to category.name, category, class: "nav-link" %>
