"Authentication and extra features"

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -46,6 +46,13 @@
             <% end %>
           <%# </ul>
         </li> %>
+        <% if current_user %>
+        <li><%= link_to "Signed in as #{current_user.email}" %> </li>
+          <li><%= link_to "Logout", '/logout' %></li>
+        <% else %>
+          <li><%= link_to 'Login', '/login' %></li>
+          <li><%= link_to 'Signup', '/signup' %></li>
+        <% end %>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
