--- a/app/views/admin/sales/_sale.html.erb
+++ b/app/views/admin/sales/_sale.html.erb
@@ -2,7 +2,7 @@
   <td>
   <%= sale.name %>
   </td>
-  
+
   <td>
   <%= sale.starts_on %>
   </td>
@@ -12,7 +12,13 @@
   </td>
 
   <td>
-   STATUS
+   <% if sale.finished? %>
+    <span class = "label label-danger">Finished</span>
+   <% elsif sale.upcoming? > Date.current %>
+    <span class = "label label-warning">Upcoming</span>
+   <% else %>
+   <span class = "label label-success">Active</span>
+   <% end %>
   </td>
 
   <td>
