--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,12 @@
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
+    <% if active_sale? %>  
+      <p class="alert alert-info">
+        There is an active <%= "back to school" %> sale going on!
+        Everything is <%= 25 %> percent off!
+      </p>
+    <% end %>  
     <%= yield %>
   </main>
 
