--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,9 +4,7 @@
     <h1>My Cart</h1>
   </header>
 
-  <% unless enhanced_cart  == [] %>
-  <div class="Order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+  <% unless enhanced_cart == [] %>
     <div class="panel panel-default items">
       <table class="table table-bordered">
         <thead>
@@ -17,27 +15,24 @@
             <th>Price</th>
           </tr>
         </thead>
-
+        
         <tbody>
           <% enhanced_cart.each do |item| %>
             <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
-          <% end %>
+          <% end %>         
         </tbody>
-
         <tfoot>
           <tr>
             <th colspan="4">
               TOTAL:
             </th>
-         
             <th>
-              <%= humanized_money_with_symbol cart_subtotal_cents / 100.0 %>
+               <%= humanized_money_with_symbol cart_subtotal_cents  %>
             </th>
           </tr>
         </tfoot>
       </table>
     </div>
-
 
     <div class="row">
       <div class="col-xs-12">
@@ -55,11 +50,13 @@
         <% end %>
       </div>
     </div>
+
   <% else %>
     <div class="alert-danger">
       <h3>Your cart is empty. <br>
-      Click <a href="/">here</a> to go back to product page
+      Click <a href="/">here</a> to see products for sale
       </h3>
-    </div> 
-  <% end %>   
+    </div>
+  <% end %>
+
 </section>
