--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li>
-        <%= link_to 'About us', :about_index %>
+        <%= link_to 'About us', :about_index,  class: "nav-link"  %>
         </li>
         <%# <li class="nav-item dropdown">
           <a
@@ -38,7 +38,7 @@
           <%# </a>
           <ul class="dropdown-menu dropdown-menu-dark" 
           aria-labelledby="navbarDropdown"> %>
-            <li><%= link_to 'Categories', [:admin, :categories] %></li>
+            <li><%= link_to 'Categories', [:admin, :categories],  class: "nav-link"  %></li>
             <% Category.all.each do |category| %>
             <li class="nav-item">
               <%= link_to category.name, category, class: "nav-link" %>
@@ -48,10 +48,10 @@
         </li> %>
         <% if current_user %>
         <li><%= link_to "Signed in as #{current_user.email}" %> </li>
-          <li><%= link_to "Logout", '/logout' %></li>
+          <li><%= link_to "Logout", '/logout', class: "nav-link"  %></li>
         <% else %>
-          <li><%= link_to 'Login', '/login' %></li>
-          <li><%= link_to 'Signup', '/signup' %></li>
+          <li><%= link_to 'Login', '/login', class: "nav-link"  %></li>
+          <li><%= link_to 'Signup', '/signup', class: "nav-link"  %></li>
         <% end %>
       </ul>
       <ul class="navbar-nav">
@@ -69,6 +69,7 @@
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
             <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
+            <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
         <li class="nav-item end-0">
