--- a/app/views/orders/_item.html.erb
+++ b/app/views/orders/_item.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <%= image_tag item.product.image.tiny %>
+    <%= image_tag item.product.image.tiny.url %>
   </td>
   <td>
     <h4><%= item.product.name %></h4>
