--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -54,7 +54,7 @@
   <% else %>
     <div class="alert-danger">
       <h3>Your cart is empty. <br>
-      Click <a href="/">here</a> to see products for sale
+      Click <a href="/">here</a> to go back to main page. 
       </h3>
     </div>
   <% end %>
